<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FA"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F8F9FA"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginVertical="20dp"
                app:srcCompat="@drawable/screenshot_2025_03_15_100619" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Stay disciplined, save smart\n - your Budget Buddy has\n your back!"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#F8F9FA"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#F8F9FA"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:backgroundTint="#F8F9FA"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="Email Address:" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="#264653"
                                app:cardCornerRadius="30dp">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etEmail"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="text"
                                        android:hint="Email" />
                                </androidx.cardview.widget.CardView>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:backgroundTint="#F8F9FA"
                        android:layout_marginTop="20dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="Password:" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="#264653"
                                app:cardCornerRadius="30dp">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etPassword"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="textPassword"
                                        android:hint="Password" />
                                </androidx.cardview.widget.CardView>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="#F8F9FA"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2A9D8F"
                        android:text="Login"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#F8F9FA"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="Don't have\n an account?"
                                android:textSize="16sp"
                                android:gravity="center"/>

                            <Button
                                android:id="@+id/btnSignup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="#BEBEBE"
                                android:text="Sign-up"
                                android:textColor="#333333"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>