...
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etFullName"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="text"
                                        android:hint="Full Name Here" />
...
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etPhoneNumber"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="phone"
                                        android:hint="Phone Number Here" />
...
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etEmail"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="text"
                                        android:hint="Email Address Here" />
...
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="30dp">

                                    <EditText
                                        android:id="@+id/etPassword"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginHorizontal="10dp"
                                        android:ems="10"
                                        android:inputType="text"
                                        android:hint="Password Here" />
...
                                android:id="@+id/cbTerms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="I agree to the " />

                            <TextView
                                android:id="@+id/tvTermsConditions"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:text="Terms &amp; Conditions"
                                android:textColor="#0066FF"
                                android:clickable="true"
                                android:focusable="true"
...
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" and " />

                            <TextView
                                android:id="@+id/tvPrivacyPolicy"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:text="Privacy Policy"
                                android:textColor="#0066FF"
                                android:clickable="true"
                                android:focusable="true"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2A9D8F"
                        android:text="Sign-up"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"/>
...
                                android:layout_weight="1"
                                android:text="Already have\n an account?"
                                android:textSize="16sp"
                                android:gravity="center"/>

                            <Button
                                android:id="@+id/btnLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="#BEBEBE"
                                android:text="Login"
                                android:textColor="#333333"
...
